--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -1,14 +1,10 @@
 name: Build and Push Docker Image
 
-name: Build and Push Docker Image
-
 on:
   push:
     branches: [main, develop]
     paths:
-      - 'str-tools/Dockerfile'
-      - 'str-tools/environments/**'
-      - '.github/workflows/build-docker.yml'
+      - docker/**
   pull_request:
     branches: [main]
   workflow_dispatch:
