--- a/nextflow.config
+++ b/nextflow.config
@@ -1,15 +1,18 @@
+process {
+    shell = ['/bin/bash', '-euo', 'pipefail']
+    container = 'ghcr.io/sa-lee/nf-str:latest'
+}
+
 profiles {
-    docker {
-        docker.enabled = true
-        process.container = 'ghcr.io/sa-lee/nf-str:latest'
-    }
     
+    // miltion hpc cluster with apptainer
     singularity {
         singularity.enabled = true
         singularity.autoMounts = true
         process.container = 'docker://ghcr.io/sa-lee/nf-str:latest'
     }
     
+    // biobank clouds (AoU = google cloud, GEL = aws)
     cloud {
         docker.enabled = true
         process.container = 'ghcr.io/sa-lee/nf-str:latest'
