--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -54,12 +54,12 @@ RUN wget https://github.com/bahlolab/EH5_kmerfilter/archive/refs/tags/v1.0.0.tar
 
 USER $MAMBA_USER
 
-RUN micromamba create -n eh5_kmerfilter -f /app/EH5_kmerfilter/environment.yml && \
-    micromamba clean --all --yes 
-
 # base dependencies for pipeline
 RUN micromamba create -f /app/environments/base.yml -y && \
     micromamba clean --all --yes
+
+RUN micromamba create -n eh5_kmerfilter -f /app/EH5_kmerfilter/environment.yml && \
+    micromamba clean --all --yes 
 
 # straglr
 RUN micromamba create -f /app/environments/straglr.yml -y && \
@@ -73,5 +73,6 @@ RUN micromamba create -f /app/environments/atarva.yml -y && \
 RUN micromamba create -n longTR -c bioconda -c conda-forge longtr
 
 
-ENV PATH="/usr/local/bin:${PATH}"
+ENV PATH="/usr/local/bin:/opt/conda/envs/base/bin:/opt/conda/envs/eh5_kmerfilter/bin/opt/conda/envs/atarva/bin/opt/conda/envs/straglr/bin/opt/conda/envs/longTR/bin${PATH}"
 ENV ENV_NAME=base
+
