--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -68,3 +68,12 @@ jobs:
             micromamba run -n atarva atarva --version
           docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
             micromamba run -n longTR LongTR --version
+          echo "Testing PATH bindings for conda packages..."
+          docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            ./straglr.py --version
+          docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            atarva --version
+          docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            LongTR --version
+          docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            python kmer_filter.py --version
