Update catalog and fix sort_bamlet

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,12 @@
 process {
     shell = ['/bin/bash', '-euo', 'pipefail']
     container = 'ghcr.io/sa-lee/nf-str:latest'
+    eh_catalog = "${projectDir}/catalogues/ExpansionHunter_hg38.json"
+    scattr_catalog = "${projectDir}/catalogues/scattr_hg38.tsv"
+    atarva_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.atarva.bed"
+    straglr_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.straglr.bed"
+    longtr_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.longTR.bed"
+    trgt_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.TRGT.bed"
 }
 
 profiles {
