--- a/nextflow.config
+++ b/nextflow.config
@@ -3,10 +3,11 @@ process {
     container = 'ghcr.io/sa-lee/nf-str:latest'
     eh_catalog = "${projectDir}/catalogues/ExpansionHunter_hg38.json"
     scattr_catalog = "${projectDir}/catalogues/scattr_hg38.tsv"
-    atarva_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.atarva.bed"
+    atarva_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.atarva.bed.gz"
     straglr_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.straglr.bed"
     longtr_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.longTR.bed"
     trgt_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.TRGT.bed"
+    strkit_catalog="${projectDir}/catalogues/STRkit_pathogenic_assoc.hg38.tsv"
 }
 
 profiles {
