--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -65,5 +65,5 @@ jobs:
           docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest trgt --version
           docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest scattr --version
           docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-            python kmer_filter.py -h
+            python EH5_kmerfilter/kmer_filter.py -h
       
