--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,13 @@ process {
     strkit_catalog="${projectDir}/catalogues/STRkit_pathogenic_assoc.hg38.tsv"
 }
 
+// downloading from public s3 buckets without credentials
+aws {
+    client {
+        anonymous = true 
+    }
+}
+
 profiles {
     
     // miltion hpc cluster with apptainer
