--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@ process {
     longtr_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.longTR.bed"
     trgt_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.TRGT.bed"
     strkit_catalog="${projectDir}/catalogues/STRkit_pathogenic_assoc.hg38.tsv"
+    
 }
 
 // downloading from public s3 buckets without credentials
@@ -24,6 +25,7 @@ profiles {
         singularity.enabled = true
         singularity.autoMounts = true
         process.container = 'docker://ghcr.io/sa-lee/nf-str:latest'
+        errorStrategy = { 'ignore' }
     }
     
     // biobank clouds (AoU = google cloud, GEL = aws)
