--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 process {
     shell = ['/bin/bash', '-euo', 'pipefail']
-    container = 'ghcr.io/sa-lee/nf-str:latest'
+    container = 'sa-lee/nf-str:latest'
     eh_catalog = "${projectDir}/catalogues/ExpansionHunter_hg38.json"
     scattr_catalog = "${projectDir}/catalogues/scattr_hg38.tsv"
     atarva_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.atarva.bed.gz"
@@ -21,17 +21,18 @@ aws {
 profiles {
     
     // miltion hpc cluster with apptainer
+    // this is also the target profile for GEL as 
     singularity {
         singularity.enabled = true
         singularity.autoMounts = true
-        process.container = 'docker://ghcr.io/sa-lee/nf-str:latest'
+        process.container = 'sa-lee/nf-str:latest'
         errorStrategy = { 'ignore' }
     }
     
-    // biobank clouds (AoU = google cloud, GEL = aws)
+    // biobank clouds (AoU = google cloud)
     cloud {
         docker.enabled = true
-        process.container = 'ghcr.io/sa-lee/nf-str:latest'
-        process.executor = 'google-batch'  // or awsbatch
+        process.container = 'sa-lee/nf-str:latest'
+        process.executor = 'google-batch' 
     }
 }
