fix container link

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 process {
     shell = ['/bin/bash', '-euo', 'pipefail']
-    container = 'sa-lee/nf-str:latest'
+    container = 'stuartlee/nf-str:latest'
     eh_catalog = "${projectDir}/catalogues/ExpansionHunter_hg38.json"
     scattr_catalog = "${projectDir}/catalogues/scattr_hg38.tsv"
     atarva_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.atarva.bed.gz"
@@ -25,14 +25,14 @@ profiles {
     singularity {
         singularity.enabled = true
         singularity.autoMounts = true
-        process.container = 'sa-lee/nf-str:latest'
+        process.container = 'stuartlee/nf-str:latest'
         errorStrategy = { 'ignore' }
     }
     
     // biobank clouds (AoU = google cloud)
     cloud {
         docker.enabled = true
-        process.container = 'sa-lee/nf-str:latest'
+        process.container = 'stuartlee/nf-str:latest'
         process.executor = 'google-batch' 
     }
 }
