--- a/nextflow.config
+++ b/nextflow.config
@@ -8,8 +8,14 @@ process {
     longtr_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.longTR.bed"
     trgt_bed = "${projectDir}/catalogues/STRchive-disease-loci.hg38.TRGT.bed"
     strkit_catalog="${projectDir}/catalogues/STRkit_pathogenic_assoc.hg38.tsv"
-    
 }
+
+process {
+    withName: 'download_s3_files' {
+        container = null
+    }
+}
+
 
 // downloading from public s3 buckets without credentials
 aws {
