--- a/nextflow.config
+++ b/nextflow.config
@@ -10,12 +10,12 @@ process {
     strkit_catalog="${projectDir}/catalogues/STRkit_pathogenic_assoc.hg38.tsv"
 }
 
+
 process {
     withName: 'download_s3_files' {
         container = null
     }
 }
-
 
 // downloading from public s3 buckets without credentials
 aws {
@@ -32,7 +32,7 @@ profiles {
         singularity.enabled = true
         singularity.autoMounts = true
         process.container = 'stuartlee/nf-str:latest'
-        errorStrategy = { 'ignore' }
+        errorStrategy { 'ignore' }
     }
     
     // biobank clouds (AoU = google cloud)
@@ -42,3 +42,16 @@ profiles {
         process.executor = 'google-batch' 
     }
 }
+
+'''
+plugins {
+    id 'nf-boost@0.3.1'
+    //confirmed working with Nextflow v24.10.5
+}
+
+// Enable nf-boost cleanup
+boost {
+    cleanup = true
+    cleanupInterval = 60
+}
+'''
